fix quote section alignment to match the design
fixed entire quote section size and alignment

--- a/styles.css
+++ b/styles.css
@@ -142,3 +142,27 @@ width: 150px;
  font-style: italic;
  color: #1F2937;
 }
+.call-to-action-section {
+ display: flex;
+ justify-content: center;
+ padding: 50px 0px;
+}
+.blue-container {
+ display: flex;
+ border-radius: 5px;
+ width: 1000px;
+ align-items: center;
+ justify-content: center;
+ gap: 150px;
+ padding: 25px 0px;
+}
+.blue-container-text > * {
+ margin: 0;
+}
+.call-to-action-button {
+ border: 1px solid white;
+ color: white;
+}
+h3 {
+ color: #F9FAF8;
+}
